--- a/.gitignore
+++ b/.gitignore
@@ -14,7 +14,10 @@
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
 
+# Project specific
 .env
+node_modules
+server/views/static/output.css
 
 # Go workspace file
 go.work
